--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     compile 'com.spotify.sdk:spotify-auth:1.0.0-beta12@aar'
     compile 'com.spotify.sdk:spotify-player:1.0.0-beta12@aar'
     compile 'com.android.support:support-v4:23.4.0'
+    //compile 'org.apache.httpcomponents:httpclient:4.5.2'
+    compile group: 'cz.msebera.android' , name: 'httpclient', version: '4.4.1.1'
+    //compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
 }
